--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -29,8 +29,9 @@
             @Html.Partial("Partials/_SidebarPartial")
                     
             <div class="main-panel">
+
                 <!-- Navbar -->
-                    
+
                 @Html.Partial("Partials/_NavbarPartial")
 
                 <!-- End Navbar -->
@@ -38,9 +39,29 @@
                 <div class="content">
                     @RenderBody()
                 </div>
-                        
+                
+                @if (TempData["SuccessMessage"] != null)
+                {
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        @TempData["SuccessMessage"]
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                }
+
+                @if (TempData["ErrorMessage"] != null)
+                {
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        @TempData["ErrorMessage"]
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                }
+
                 @Html.Partial("Partials/_FooterPartial")
-                        
+
             </div>
         </div>
 
