--- a/LibApp.WebApp/Views/Books/Index.cshtml
+++ b/LibApp.WebApp/Views/Books/Index.cshtml
@@ -127,10 +127,11 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.ModifiedByUser)
                     </td>
+                    @* TODO: Remove this actions for regular user *@
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                         <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a class="delete-button" asp-action="Delete" asp-route-id="@item.Id" data-book-id="@item.Id">Delete</a>
                     </td>
                 </tr>
             }
