--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
 
         <script src="/demo/demo.js"></script>
     
-        <!--   Select2 -->
+        <!-- Select2 -->
         <script>
             $(document).ready(function () {
                 $("#AuthorIds").select2({
@@ -117,6 +117,35 @@
                 var releaseYearInput = document.getElementById("ReleaseYear");
                 releaseYearInput.value = new Date().getFullYear();
             });
+        </script>
+
+        <!-- Delete -->
+        <script>
+        $(document).ready(function () {
+            $('.delete-button').on('click', function (event) {
+                event.preventDefault(); // Prevent the default behavior of the anchor element
+
+                var bookId = $(this).data('book-id');
+                var confirmation = confirm('Are you sure you want to delete this book?');
+
+                if (confirmation) {
+                    $.ajax({
+                        url: '@Url.Action("Delete", "Books")',
+                        data: { id: bookId },
+                        type: 'POST',
+                        success: function (data) {
+                            console.log('success');
+
+                            location.reload();
+                        },
+                        error: function (xhr, ajaxOptions, thrownError) {
+                            console.log('error');
+                            alert('Error: ' + xhr.responseText);
+                        }
+                    });
+                }
+            });
+        });
         </script>
 
     </body>
