LibApp.WebApp - HomeController Removed Dashboard Page

--- a/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
@@ -13,14 +13,9 @@
         </a>
     </div>
     @*TODO: Links*@
+    @*TODO: Different for regular and librarian*@
     <div class="sidebar-wrapper">
         <ul class="nav">
-            <li class="active ">
-                <a asp-controller="Home" asp-action="Dashboard">
-                    <i class="nc-icon nc-bank"></i>
-                    <p>Dashboard</p>
-                </a>
-            </li>
             <li>
                 <a asp-controller="Books" asp-action="Index">
                     <i class="nc-icon nc-book-bookmark"></i>
