LibApp.WebApp - Books ModifiedDateTime Fix

--- a/LibApp.WebApp/Views/Books/Edit.cshtml
+++ b/LibApp.WebApp/Views/Books/Edit.cshtml
@@ -116,6 +116,8 @@
                 <span asp-validation-for="ReservedQuantity" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="CreatedDateTime" />
+            <input type="hidden" asp-for="ModifiedDateTime" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
