--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
 
-    @* <meta name="RequestVerificationToken" content="your-token-value" /> *@
+        @*<meta name="RequestVerificationToken" content="your-token-value" /> *@
 
         <!--     Fonts and icons     -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
@@ -22,6 +22,8 @@
         <link href="/css/paper-dashboard.css?v=2.0.1" rel="stylesheet"/>
         <link href="/demo/demo.css" rel="stylesheet"/>
         <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+        
+        @RenderSection("Scripts", required: false)
     </head>
 
     <body>
@@ -35,7 +37,6 @@
                 <!-- Navbar -->
 
                 @Html.Partial("Partials/_NavbarPartial")
-
                 <!-- End Navbar -->
 
                 <div class="content">
