--- a/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
@@ -58,13 +58,14 @@
                     <p>Users</p>
                 </a>
             </li>
-            @*<li>
-                TODO: User controller not index action but like thisUser or smt
-                <a asp-controller="User" asp-action="Index">
+            @* TODO: Profile for thisUser or smt *@
+@*             <li>
+
+                <a asp-controller="Users" asp-action="Index">
                     <i class="nc-icon nc-settings-gear-65"></i>
                     <p>Profile</p>
                 </a>
-            </li>*@
+            </li> *@
             <li>
                 <a asp-controller="Rates" asp-action="Index">
                     <i class="nc-icon nc-money-coins"></i>
