--- a/LibApp.WebApp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LibApp.WebApp/Areas/Identity/Pages/Account/Login.cshtml
@@ -36,17 +36,17 @@
                 <div>
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
-@*                 <div>
-                    <p>
+                <div>
+@*                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
+                    </p> *@
+@*                     <p>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
+                    </p> *@
+@*                     <p>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div> *@
+                    </p> *@
+                </div>
             </form>
         </section>
     </div>
