--- a/LibApp.WebApp/Views/Users/Create.cshtml
+++ b/LibApp.WebApp/Views/Users/Create.cshtml
@@ -13,14 +13,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CreatedByUserId" class="control-label"></label>
-                <select asp-for="CreatedByUserId" class ="form-control" asp-items="ViewBag.CreatedByUserId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ModifiedByUserId" class="control-label"></label>
-                <select asp-for="ModifiedByUserId" class ="form-control" asp-items="ViewBag.ModifiedByUserId"></select>
-            </div>
+
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -30,11 +23,6 @@
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsVerified" /> @Html.DisplayNameFor(model => model.IsVerified)
-                </label>
             </div>
             <div class="form-group">
                 <label asp-for="VerificationToken" class="control-label"></label>
@@ -51,9 +39,9 @@
                 <input asp-for="LastLoginDateTime" class="form-control" />
                 <span asp-validation-for="LastLoginDateTime" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <div>
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
+                    <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                 </label>
             </div>
             <div class="form-group">
