--- a/LibApp.WebApp/Views/Users/Delete.cshtml
+++ b/LibApp.WebApp/Views/Users/Delete.cshtml
@@ -61,10 +61,10 @@
             @Html.DisplayFor(model => model.LastLoginDateTime)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Active)
+            @Html.DisplayNameFor(model => model.IsActive)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Active)
+            @Html.DisplayFor(model => model.IsActive)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImagePath)
