--- a/LibApp.WebApp/Views/Users/Details.cshtml
+++ b/LibApp.WebApp/Views/Users/Details.cshtml
@@ -49,10 +49,10 @@
             @Html.DisplayFor(model => model.IsVerified)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Active)
+            @Html.DisplayNameFor(model => model.IsActive)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Active)
+            @Html.DisplayFor(model => model.IsActive)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsCardActive)
