--- a/LibApp.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -7,6 +7,7 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
+    @* TODO: Check if can look better*@
     <li class="nav-item">
         <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
