--- a/LibApp.WebApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/LibApp.WebApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,6 +6,8 @@
 
 <h1>@ViewData["Title"]</h1>
 
+@* TODO: All needed fields *@
+
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
@@ -32,7 +34,3 @@
         </form>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
