--- a/LibApp.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -13,13 +13,13 @@
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
+            <button id="logout" type="submit" class="btn-link text-dark border-0">Logout</button>
         </form>
     </li>
 }
 else
 {
-    @* TODO: Register will be in users create *@
+    @* Register is in users create *@
     @*<li class="nav-item">
         <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li> *@
