LibApp.WebApp - LoginPartial Beautification

--- a/LibApp.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -7,9 +7,12 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    @* TODO: Check if can look better*@
     <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            @* Hello @UserManager.GetUserName(User)! *@
+            <i class="nc-icon nc-settings-gear-65"></i>
+        </a>
+
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
