LibApp.WebApp - User Details Show Only Date In DateOfBirth

--- a/LibApp.WebApp/Views/Users/Details.cshtml
+++ b/LibApp.WebApp/Views/Users/Details.cshtml
@@ -67,10 +67,10 @@
             @Html.DisplayFor(model => model.CardCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfBirth)
+            @Html.DisplayNameFor(model => model.DateOfBirthToShow)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfBirth)
+            @Html.DisplayFor(model => model.DateOfBirthToShow)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.City)
